# Hvl-Lightdm-Greeter

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.16cff8f  CMakeLists.txt.user.3c921a1  Dockerfile  README.md  README_EN.md  VERSION  clockform.cpp  clockform.h  clockform.ui  dialog_webview.cpp  dialog_webview.h  dialog_webview.ui  hvl-lightdm-greeter.conf  hvl-lightdm-greeter.desktop  hvl-lightdm-greeter.qrc  license-header.txt  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  networkdialog.cpp  networkdialog.h  networkdialog.ui  qt-lightdm-greeter.conf  qt-lightdm-greeter.desktop  qt-lightdm-greeter.qrc  rightclickenabler.cpp  rightclickenabler.h  settings.cpp  settings.h  settingsform.cpp  settingsform.h  settingsform.ui
.github/workflows/: build.yml
DEBIAN/: postinst  postrm  preinst
languages/: hvl-lightdm_tr.ts  tr.ts
scripts/: greeter.sh
src/: CMakeLists.txt  clockform.cpp  clockform.h  clockform.ui  cxxopts.hpp  dialog_webview.cpp  dialog_webview.h  greeter.cpp  greeter.h  hvl-lightdm-greeter.qrc  keyboard.cpp  keyboard.h  keyboard.ui  loginform.cpp  loginform.h  loginform.ui  loginhelpers.cpp  loginhelpers.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  networkdialog.cpp  networkdialog.h  networkdialog.ui  powerdialog.cpp  powerdialog.h  powerdialog.ui  powerform.cpp  powerform.h  powerform.ui  settings.cpp  settings.h  settingsform.cpp  settingsform.h  settingsform.ui  ui_keyboard_old.h  x11_utils.cpp  x11_utils.h
ui/: CustomButton.qml  LoginFrame.qml  StringInput.qml  Style.qml  UserButton.qml  WaitFrame.qml  main.qml  other.qml
